adding necessary test dependcies.

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "ts-node": "^8.2.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "tedious": ">6.1.1"
   },
   "nyc": {
     "require": "ts-node/register",
